terraform/private_route_table.tf
resource "aws_route_table" "private_route_table" {
    vpc_id = aws_vpc.store_vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.online_ng.id
    }

    tags = {
        Name = "private_route_table"
    }

}

resource "aws_route_table_association" "private_association_1" {
    subnet_id = aws_subnet.private_subnet_1.id
    route_table_id = aws_route_table.private_route_table.id
}

resource "aws_route_table_association" "private_association_2" {
    subnet_id = aws_subnet.private_subnet_2.id
    route_table_id = aws_route_table.private_route_table.id
}
