terraform/public_route_table.tf
resource "aws_route_table" "public_route_table" {
    vpc_id = aws_vpc.store_vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.online_ig.id
    }

    tags = {
      Name = "public_route_table"
    }

}

resource "aws_route_table_association" "associate_1" {
    subnet_id = aws_subnet.public_subnet_1.id
    route_table_id = aws_route_table.public_route_table.id
}

resource "aws_route_table_association" "associate_2" {
    subnet_id = aws_subnet.public_subnet_2.id
    route_table_id = aws_route_table.public_route_table.id
}
